--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       type="image/svg+xml"
       href="./public/images/Logo-Gold.png"
     />
+    <script src="http://localhost:64646/plugin.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ko'prik Qurulish</title>
   </head>
